--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,28 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.icon {
+  width: 1em;
+  height: 1em;
+}
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  align-items: center;
+  z-index: 1050;
+}
+
+item-center {
+  align-items: center;
+}
+
 a {
   color: inherit;
   text-decoration: none;
