--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,21 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+/* custom css*/
+
 .icon {
   width: 1em;
   height: 1em;
@@ -28,15 +43,6 @@ item-center {
   align-items: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.pointer {
-  cursor: pointer;
+.red-border {
+  border: 2px solid #9b1616 !important;
 }
